# DL_Proj

./: .gitignore  Group.md  __todo.txt
assignment_1/: .gitignore  INSTALL.md  MyMLP.py  README.md  SUMMARY_REPORT.md  TASK1_REPORT.md  _NOTEBOOK_BUILD_PLAN.md  _PROJ_PLAN.md  __tracked_files.txt  _copilot.md  _first_steps_notes.md  colab_test.ipynb  fix_nb_celltypes.py  notebook.ipynb  requirements.txt  setup.cfg  task1_mlp.py
assignment_1/proj_guides/: _PROJ_PLAN.md  _copilot.md  _first_steps_notes.md  assign_1_guide.md  macro_avg_f1_score.md
assignment_1/src/: config.py
assignment_1/src/data/: dataset.py  dataset_test.py  eda.py  eda_plots.py
assignment_1/src/datasets/: dataset.py  dataset_test.py  eda.py  eda_plots.py
assignment_1/src/evaluation/: analysis.py  ensemble.py  metrics.py  persistence.py  plots.py  submission.py
assignment_1/src/models/: cnn.py  mlp.py  models_test.py
assignment_1/src/training/: early_stopping.py  train.py  train_test.py
assignment_1/task1/: TASK1_FINAL_PLAN.md  TASK1_REPORT.md  __todo.md  d.py  more_notes.md  notebook.ipynb  task1.ipynb  task1.txt  task1_colab.ipynb  task1_local.ipynb
assignment_1/task2/: _task2_work_plan.md  task2.ipynb
