[metadata]
name = DL-Proj-Assignment1
version = 0.1.0
description = Pokemon image classification — DL Assignment 1 (MLP/CNN/Transfer Learning)

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.2
    torchvision>=0.17
    scikit-learn>=1.4
    pandas>=2.0
    numpy>=1.26
    matplotlib>=3.8
    seaborn>=0.13
    Pillow>=10.0
    tqdm>=4.66

[options.packages.find]
# find all packages (folders with __init__.py) starting from the project root
where = .
